	PR target/37197 	* config/i386/driver-i386.c (processor_signatures): New enum. 	(SIG_GEODE): Move from vendor_signatures to processor_signatures. 	(host_detect_local_cpu): For SIG_AMD vendor, check for SIG_GEODE 	processor signature to detect geode processor.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147429 138bc75d-0d04-0410-961f-82ee72b054a4